packages/components/src/components/DatePicker/styles/datePickerInput.module.scss
/* (c) Copyright Frontify Ltd., all rights reserved. */
@use '../../../utilities/sizeToken.module.scss';
@use '../../../utilities/focusStyle.module.scss';
@use '../../../utilities/transitions.module.scss';

.root {
    width: 100%;
    position: relative;
    display: flex;
    justify-content: start;
    align-items: center;
    gap: sizeToken.get(2);
    overflow: hidden;

    font-family: var(--typography-font-family-primary);
    font-weight: 400;
    font-size: var(--typography-font-size-medium);
    line-height: var(--typography-line-height-medium);
    box-sizing: border-box;

    text-align: start;
    color: var(--color-secondary-default);
    background-color: var(--color-surface-default);
    border-radius: var(--border-radius-medium);
    border: var(--border-width-default) solid var(--color-line-mid);

    & {
        @include transitions.transition-colors;
    }

    &:hover {
        border-color: var(--color-line-strong);
        color: var(--color-secondary-default);
    }

    &:has(:focus-visible),
    &:has([data-state='open']) {
        border-color: var(--color-line-strong);
        color: var(--color-line-strong);

        .caret {
            transform: rotate(180deg);
        }
    }

    &:has(button[data-date-input-select]:focus-visible) {
        @include focusStyle.focus-outline-styles;
    }

    &:has(:disabled),
    &[data-disabled='true'] {
        border-color: var(--color-line-subtle);
        background-color: var(--color-container-disabled-default);
        color: var(--color-disabled-default);
        cursor: default;

        .dateName {
            color: var(--color-disabled-default);
        }
    }
}

.caret {
    @include transitions.transition-all;
}

.dateName {
    color: var(--color-primary-default);
}

.button {
    display: flex;
    justify-content: start;
    align-items: center;
    gap: sizeToken.get(2);
    flex-grow: 1;
    min-width: 0;
    padding-inline: sizeToken.get(3);
    height: sizeToken.get(9);
    outline: none;
    overflow: hidden;
}

.actions {
    display: flex;
    align-items: center;
    flex-shrink: 0;
    padding-inline-end: sizeToken.get(3);
    pointer-events: none;
    gap: sizeToken.get(2);

    & > button:has(.clearIcon) {
        pointer-events: all;
    }

    button:not(:hover) .clearIcon {
        color: var(--color-secondary-default) !important;
    }

    .root:has(:disabled) button .clearIcon,
    .root[data-disabled='true'] button .clearIcon {
        color: var(--color-disabled-default) !important;
    }
}

.clear {
    outline: none;
    padding: sizeToken.get(1);
    margin: sizeToken.get(1);
    @include focusStyle.focus-outline;
    pointer-events: all;
}

